Spurious lines generated at auto-hyphenation breakpoint when clearing a float
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
People
(Reporter: jfkthame, Assigned: jfkthame)
References
Details
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
Testcase: https://codepen.io/jfkthame/pen/BaeJOmE?editors=1100
Observe how as the blue float grows, in the left-hand example (using hyphens: manual) the text is pushed down smoothly to just clear the bottom of the float box. This is the expected behavior.
The right-hand example, which uses hyphens: auto, should behave exactly the same, but it doesn't: observe how the text below the float jumps down by line-height increments, because spurious empty lines are being generated, each of which then displays a hyphen.
This is the underlying cause of the hang in bug 1901624.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Comment 4•1 year ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D213926
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
Although this isn't a recent regression, the fact that it has resulted in a browser hang on a real-world site (see bug 1901624 and the original report in bug 1901377), together with the minimal nature of the fix, makes it worth uplifting to beta IMO, so that it gets out to users sooner.
Comment 6•1 year ago
|
||
| bugherder | ||
Comment 7•1 year ago
|
||
beta Uplift Approval Request
- User impact if declined: possible hang/crash depending on web-page content
- Code covered by automated testing: yes
- Fix verified in Nightly: no
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: n/a
- Risk associated with taking this patch: minimal
- Explanation of risk level: simple condition to prevent spurious line-breaks when hyphenation is used
- String changes made/needed: none
- Is Android affected?: yes
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Description
•