Bug 1902974 - Don't allow a hyphenation break to be used at start-of-line.  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D213926

Differential Revision: https://phabricator.services.mozilla.com/D214040